Ctrlproxy 2.7:
 * Add autosave (Daniel Poelzleithner <ctrlproxy@poelzi.org>)
 * Use PREFIX sent by server
 * Add get_prefix_by_mode()
 * Use CHANTYPES sent by server
 * Add way to get network features
 * Keep track of channels nick is on in network_nick structure
 * New, more advanced filter system supporting classes and priorities
 * Add help support in admin module
 	(Daniel Poelzleithner <ctrlproxy@poelzi.org>)
 * Make name and hostmask attribute of nick on network shared 
 	(Daniel Poelzleithner <ctrlproxy@poelzi.org>)
 * Do the actual NICK after GHOST'ing another nick
 * Fix bug with setting PRIVATE too often
 * Fix issue with NickServ IDENTIFY'ing when connecting to server
 * Support multiple processes
 * Add cisg utility
 * Update items kept track of by stats by default
 * Put some modules in their own directory
 * Add report_time
 * Add linestack_file
 * Add repl_lastdisconnect.so
 * Add server_connect, server_disconnect and initialized hooks
 * Add python plugin (Daniel Poelzleithner <ctrlproxy@poelzi.org>)
 * Add gnutls support
 * Fix problems with incorrectly added colons

Ctrlproxy 2.6:
 * Configuration utility (Kyoshiro)
 * Add bind to specific IP only support
 * Fix some bugs in parsing line structs
 * Fix MODE handling
 * Lots of memory leaks fixed
 * Added MOTD support
 * Added quickstart
 * Update example RC file
 * Add repl_simple module
 * Add DETACH command to admin module (Stephane Lacoin)
 * Fix for immediately IDENTIFY'ing when connecting to server
 * Add backwards compatibility module 'repl_memory'
 * Fix for better RFC compliance
 * Fixed bug when crashing on exit
 * Fixed daemon mode
 * Start FAQ
 * Several bugs in log_custom fixed (thanks, igla)
 * Fix build without libssl
 * Add support for building PDF using db2latex
 * Add attribute only_noclient
 * Split repl_memory into linestack_memory and repl_simple
 * Add linestack support
 * Add linestack_memory
 * Add repl_command
 * Add repl_highlight
 * Add repl_simple